add python frontend with c++ backend demo

--- a/Python/CppBackend/Makefile
+++ b/Python/CppBackend/Makefile
@@ -2,8 +2,7 @@ all: libdemo.so test
 
 libdemo.so: include/demo.h src/demo.cc
 	mkdir -p lib
-	g++ -fPIC -std=c++11 -pthread -Iinclude/ -c src/demo.cc -o lib/demo.o
-	g++ -shared lib/demo.o -o lib/libdemo.so
+	g++ -Iinclude/ src/demo.cc src/c_api_wrapper.cc -shared -lpthread -o lib/libdemo.so -fPIC -std=c++11
 
 test: test.cc include/demo.h src/demo.cc
 	g++ -std=c++11 -pthread -Iinclude/ test.cc -o test -Llib/ -ldemo
